feat: Add Button 자리 고정

--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -40,7 +40,8 @@
 
             <TextView
                 android:id="@+id/tv_selected_date"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="24dp"
                 android:layout_marginStart="24dp"
