--- a/app/src/main/res/layout/edit_detail_popup.xml
+++ b/app/src/main/res/layout/edit_detail_popup.xml
@@ -1,7 +1,7 @@
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:fillViewport="true"
     android:padding="16dp">
 
@@ -17,17 +17,18 @@
             android:layout_gravity="end|top"
             android:layout_margin="8dp"
             android:backgroundTint="@color/pastel_blue_darkest"
-            android:text="X"
+            android:text="x"
             android:textSize="16sp"
             android:textColor="@android:color/white"
-            android:background="@drawable/search_bar" />
+            android:background="@drawable/search_bar"
+            android:layout_marginTop="20dp"/>
 
         <!-- 메인 콘텐츠 -->
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="32dp">
+            android:paddingTop="80dp">
 
             <!-- 기존 콘텐츠 -->
             <FrameLayout
@@ -184,6 +185,13 @@
                     android:layout_marginStart="8dp"
                     android:textSize="18sp" />
             </LinearLayout>
+
+            <!-- 구분선 -->
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginVertical="16dp"
+                android:background="@android:color/darker_gray" />
 
             <!-- 댓글 목록 -->
             <TextView
