--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -56,11 +56,12 @@
                 android:id="@+id/addScheduleButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Add Schedule"
+                android:text="Add"
                 android:backgroundTint="@color/pastel_blue_accent"
                 android:background="@drawable/add_contact"
                 android:textColor="@color/white"
-                android:layout_marginStart="20dp" />
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="30dp" />
         </LinearLayout>
 
         <!-- RecyclerView -->
